Crystal 8/ProgramF/SEAGAT~1/CRW/DEV/include/crpe.h


#define PE_UNCHANGED       -1
#define PE_JOBNOTSTARTED 1
#define PE_JOBINPROGRESS 2
#define PE_JOBCOMPLETED  3
#define PE_JOBFAILED     4  
#define PE_JOBCANCELLED  5  
#define PE_JOBHALTED     6  
typedef struct PEJobInfo
{
    WORD StructSize;    
    DWORD NumRecordsRead,
          NumRecordsSelected,
          NumRecordsPrinted;
    WORD  DisplayPageN, 
          LatestPageN,  
          StartPageN;   
    BOOL  printEnded;   
}PEJobInfo;
#define PE_SIZEOF_JOB_INFO (sizeof (PEJobInfo))
short CRPE_API PEGetJobStatus (short printJob,
                               PEJobInfo FAR *jobInfo);
BOOL CRPE_API PESetDialogParentWindow (short printJob,
                                       HWND parentWindow);
BOOL CRPE_API PEEnableProgressDialog (short printJob,
                                      BOOL enable);
BOOL CRPE_API PEGetAllowPromptDialog(short printJob);
BOOL CRPE_API PESetAllowPromptDialog(short printJob, BOOL showPromptDialog);
short CRPE_API PEGetErrorCode (short printJob);
BOOL  CRPE_API PEGetErrorText (short printJob,
                               HANDLE FAR *textHandle,
                               short  FAR *textLength);
BOOL  CRPE_API PEGetHandleString (HANDLE textHandle,
                                  char FAR *buffer,
                                  short bufferLength);
BOOL CRPE_API PEGetPrintDate (short printJob,
                              short FAR *year,
                              short FAR *month,
                              short FAR *day);
BOOL CRPE_API PESetPrintDate (short printJob,
                              short year,
                              short month,
                              short day);
#define PE_ALLSECTIONS           0
#define PE_SECTION_CODE(sectionType,groupN,sectionN) \
    (((sectionType) * 1000) + ((groupN) % 25) + (((sectionN) % 40) * 25))
#define PE_SECT_PAGE_HEADER      2
#define PE_SECT_PAGE_FOOTER      7
#define PE_SECT_REPORT_HEADER    1
#define PE_SECT_REPORT_FOOTER    8
#define PE_SECT_GROUP_HEADER     3
#define PE_SECT_GROUP_FOOTER     5
#define PE_SECT_DETAIL           4
#define PE_SECTION_TYPE(sectionCode) ((sectionCode) / 1000)
#define PE_GROUP_N(sectionCode)      ((sectionCode) % 25)
#define PE_SECTION_N(sectionCode)    (((sectionCode) / 25) % 40)
#define PE_HEADERSECTION      PE_SECTION_CODE (PE_SECT_PAGE_HEADER,   0, 0)
#define PE_FOOTERSECTION      PE_SECTION_CODE (PE_SECT_PAGE_FOOTER,   0, 0)
#define PE_TITLESECTION       PE_SECTION_CODE (PE_SECT_REPORT_HEADER, 0, 0)
#define PE_SUMMARYSECTION     PE_SECTION_CODE (PE_SECT_REPORT_FOOTER, 0, 0)
#define PE_GROUPHEADER        PE_SECTION_CODE (PE_SECT_GROUP_HEADER,  0, 0)
#define PE_GROUPFOOTER        PE_SECTION_CODE (PE_SECT_GROUP_FOOTER,  0, 0)
#define PE_DETAILSECTION      PE_SECTION_CODE (PE_SECT_DETAIL,        0, 0)
#define PE_GRANDTOTALSECTION  PE_SUMMARYSECTION
#define PE_SF_MAX_NAME_LENGTH 50
#define PE_SF_DESCENDING 0
#define PE_SF_ASCENDING  1
#define PE_SF_ORIGINAL   2 
#define PE_SF_SPECIFIED  3 
#define PE_GC_ANYCHANGE    0
#define PE_GC_DAILY        0
#define PE_GC_WEEKLY       1
#define PE_GC_BIWEEKLY     2
#define PE_GC_SEMIMONTHLY  3
#define PE_GC_MONTHLY      4
#define PE_GC_QUARTERLY    5
#define PE_GC_SEMIANNUALLY 6
#define PE_GC_ANNUALLY     7
#define PE_GC_BYSECOND     8
#define PE_GC_BYMINUTE     9
#define PE_GC_BYHOUR       10
#define PE_GC_BYAMPM       11
#define PE_GC_TOYES        1
#define PE_GC_TONO         2
#define PE_GC_EVERYYES     3
#define PE_GC_EVERYNO      4
#define PE_GC_NEXTISYES    5
#define PE_GC_NEXTISNO     6
BOOL CRPE_API PESetGroupCondition (short printJob,
                                   short sectionCode,
                                   const char FAR *conditionField, 
                                   short condition,       
                                   short sortDirection);  
short CRPE_API PEGetNGroups (short printJob);  
#define PE_GC_CONDITIONMASK   0x00FF
#define PE_GC_TYPEMASK        0x0F00
#define PE_GC_TYPEOTHER       0x0000
#define PE_GC_TYPEDATE        0x0200
#define PE_GC_TYPEBOOLEAN     0x0400
#define PE_GC_TYPETIME        0x0800
BOOL CRPE_API PEGetGroupCondition (short printJob,
                                   short sectionCode,
                                   HANDLE FAR *conditionFieldHandle,
                                   short  FAR *conditionFieldLength,
                                   short  FAR *condition,
                                   short  FAR *sortDirection);
#define PE_FIELD_NAME_LEN 512
#define PE_GO_TBN_ALL_GROUPS_UNSORTED   0
#define PE_GO_TBN_ALL_GROUPS_SORTED     1
#define PE_GO_TBN_TOP_N_GROUPS          2
#define PE_GO_TBN_BOTTOM_N_GROUPS       3
typedef struct PEGroupOptions
{ 
    WORD StructSize;
    short condition;
    char fieldName [PE_FIELD_NAME_LEN]; 
    short sortDirection;                
    short repeatGroupHeader;            
    short keepGroupTogether;            
    short topOrBottomNGroups;           
    char topOrBottomNSortFieldName [PE_FIELD_NAME_LEN]; 
    short nTopOrBottomGroups;           
    short discardOtherGroups;           
    short   ignored;                                
    short   hierarchicalSorting;                    
    char    instanceIDField [PE_FIELD_NAME_LEN];    
    char    parentIDField [PE_FIELD_NAME_LEN];      
    long    groupIndent;                            
}
    PEGroupOptions;
#define PE_SIZEOF_GROUP_OPTIONS (sizeof (PEGroupOptions))
BOOL CRPE_API PEGetGroupOptions(short printJob,
                                short groupN,
                                PEGroupOptions FAR * groupOptions);
BOOL CRPE_API PESetGroupOptions(short printJob,
                                short groupN,
                                PEGroupOptions FAR * groupOptions);
short CRPE_API PEGetNFormulas (short printJob);
BOOL CRPE_API PEGetNthFormula (short printJob,
                               short formulaN,
                               HANDLE FAR *nameHandle,
                               short FAR *nameLength,
                               HANDLE FAR *textHandle,
                               short FAR *textLength);
BOOL CRPE_API PEGetFormula (short printJob,
                            const char FAR *formulaName,
                            HANDLE FAR *textHandle,
                            short FAR *textLength);
BOOL CRPE_API PESetFormula (short printJob,
                            const char FAR *formulaName,
                            const char FAR *formulaString);
BOOL CRPE_API PECheckFormula (short printJob,
                              const char FAR *formulaName);
BOOL CRPE_API PEGetSelectionFormula (short printJob,
                                     HANDLE FAR *textHandle,
                                     short FAR *textLength);
BOOL CRPE_API PESetSelectionFormula (short printJob,
                                     const char FAR *formulaString);
BOOL CRPE_API PECheckSelectionFormula (short printJob);
BOOL CRPE_API PEGetGroupSelectionFormula (short printJob,
                                          HANDLE FAR *textHandle,
                                          short FAR *textLength);
BOOL CRPE_API PESetGroupSelectionFormula (short printJob,
                                          const char FAR *formulaString);
BOOL CRPE_API PECheckGroupSelectionFormula (short printJob);
short CRPE_API PEGetNSQLExpressions (short printJob);
BOOL CRPE_API PEGetNthSQLExpression (short printJob,
                                    short expressionN,
                                    HANDLE FAR *nameHandle,
                                    short FAR *nameLength,
                                    HANDLE FAR *textHandle,
                                    short FAR *textLength);
BOOL CRPE_API PEGetSQLExpression (short printJob,
                                    const char FAR *expressionName,
                                    HANDLE FAR *textHandle,
                                    short FAR *textLength);
BOOL CRPE_API PESetSQLExpression (short printJob,
                                    const char FAR *expressionName,
                                    const char FAR *expressionString);
BOOL CRPE_API PECheckSQLExpression (short printJob,
                                    const char FAR *expressionName);
#define PE_WORD_LEN           2
#define PE_PF_REPORT_NAME_LEN 128
#define PE_PF_NAME_LEN        256
#define PE_PF_PROMPT_LEN      256
#define PE_PF_VALUE_LEN       256
#define PE_PF_EDITMASK_LEN    256
#define PE_PF_NUMBER          0
#define PE_PF_CURRENCY        1
#define PE_PF_BOOLEAN         2
#define PE_PF_DATE            3
#define PE_PF_STRING          4
#define PE_PF_DATETIME        5
#define PE_PF_TIME            6
typedef struct PEParameterFieldInfo
{
    WORD StructSize;
    WORD ValueType;
    WORD DefaultValueSet;
    WORD CurrentValueSet;
    char Name [PE_PF_NAME_LEN];
    char Prompt [PE_PF_PROMPT_LEN];
    char DefaultValue [PE_PF_VALUE_LEN];
    char CurrentValue [PE_PF_VALUE_LEN];
    char ReportName [PE_PF_REPORT_NAME_LEN];
    WORD needsCurrentValue; 
    WORD isLimited;
    double MinSize;
    double MaxSize;
    char EditMask [PE_PF_EDITMASK_LEN];
    WORD isHidden;
}PEParameterFieldInfo;
#define PE_SIZEOF_PARAMETER_FIELD_INFO (sizeof (PEParameterFieldInfo))
short CRPE_API PEGetNParameterFields (short printJob);
BOOL CRPE_API PEGetNthParameterField (short printJob,
                                      short parameterN,
                                      PEParameterFieldInfo FAR *parameterInfo);
BOOL CRPE_API PESetNthParameterField (short printJob,
                                      short parameterN,
                                      PEParameterFieldInfo FAR *parameterInfo);
typedef struct PEParameterValueInfo {
    WORD StructSize;
    short isNullable;               
    short disallowEditing;          
    short allowMultipleValues;      
    short hasDiscreteValues;        
    short partOfGroup;              
    short groupNum;                 
    short mutuallyExclusiveGroup;   
} PEParameterValueInfo;
BOOL CRPE_API PEGetParameterValueInfo (short printJob, 
                                       const char FAR * parameterFieldName, 
                                       const char FAR * reportName, 
                                       PEParameterValueInfo FAR * valueInfo);
short CRPE_API PEGetNthParameterType (short printJob, short index); 
#define PE_WORD_LEN          2
                                 BOOL ( CALLBACK * callbackProc )(short eventID, void *param, void *userData),
#else
                                 BOOL ( CALLBACK __export * callbackProc )(short eventID, void *param, void *userData),
#endif