Crystal 8/ProgramF/SEAGAT~1/CRW/DEV/include/global32.bas


' To work around the problem of 4 - Byte alignment the PEGetJobStatus
' call has been re-declared locally. When your application calls PEGetJobStatus
' it is calling a function in this file which in turn calls CRPE32.DLL.
Global Const PE_JOBNOTSTARTED = 1
Global Const PE_JOBINPROGRESS = 2
Global Const PE_JOBCOMPLETED = 3
Global Const PE_JOBFAILED = 4
Global Const PE_JOBCANCELLED = 5
Global Const PE_JOBHALTED = 6   ' too many records or too much time

Type PEJobInfo
    StructSize As Integer  ' initialize to PE_SIZEOF_JOB_INFO

    NumRecordsRead As Long
    NumRecordsSelected As Long
    NumRecordsPrinted As Long

    DisplayPageN As Integer
    LatestPageN As Integer
    StartPageN As Integer

    PrintEnded As Long
End Type

Type SplitPEJobInfo
    StructSize As Integer  ' initialize to PE_SIZEOF_JOB_INFO

    NumRecordsRead1 As Integer
    NumRecordsRead2 As Integer
    NumRecordsSelected1 As Integer
    NumRecordsSelected2 As Integer
    NumRecordsPrinted1 As Integer
    NumRecordsPrinted2 As Integer

    DisplayPageN As Integer
    LatestPageN As Integer
    StartPageN As Integer

    PrintEnded As Long
End Type

Global Const PE_SIZEOF_JOB_INFO = 10 * PE_WORD_LEN + 4

Declare Function RealPEGetJobStatus Lib "crpe32.dll" Alias "PEGetJobStatus" (ByVal printJob%, JobInfo As SplitPEJobInfo) As Integer

' Controlling dialogs
' -------------------

Declare Function PESetDialogParentWindow Lib "crpe32.dll" (ByVal printJob%, ByVal parentWindow As Long) As Integer

Declare Function PEEnableProgressDialog Lib "crpe32.dll" (ByVal printJob%, ByVal enable%) As Integer

' Controlling Paremeter Field Prompting Dialog
' --------------------------------------------

' Set boolean to indicate whether CRPE is allowed to prompt for parameter values
' during printing.

Declare Function PEGetAllowPromptDialog Lib "crpe32.dll" (ByVal printJob%) As Integer
Declare Function PESetAllowPromptDialog Lib "crpe32.dll" (ByVal printJob%, ByVal showPromptDialog%) As Integer


' Print job error codes and messages
' ----------------------------------

Declare Function PEGetErrorCode Lib "crpe32.dll" (ByVal printJob%) As Integer

Declare Function PEGetErrorText Lib "crpe32.dll" (ByVal printJob%, TextHandle As Long, TextLength%) As Integer

Declare Function PEGetHandleString Lib "crpe32.dll" (ByVal TextHandle As Long, ByVal Buffer$, ByVal BufferLength%) As Integer


' Setting the print date
' ----------------------

Declare Function PEGetPrintDate Lib "crpe32.dll" (ByVal printJob%, Date_Year%, Date_Month%, Date_Day%) As Integer

Declare Function PESetPrintDate Lib "crpe32.dll" (ByVal printJob%, ByVal Date_Year%, ByVal Date_Month%, ByVal Date_Day%) As Integer

' Encoding and Decoding Section Codes
' -----------------------------------

Global Const PE_ALLSECTIONS = 0

'Section types for use with PE_SECTION_CODE, PE_SECTION_TYPE, PE_GROUP_N and PE_SECTION_N functions
Global Const PE_SECT_PAGE_HEADER = 2
Global Const PE_SECT_PAGE_FOOTER = 7
Global Const PE_SECT_REPORT_HEADER = 1
Global Const PE_SECT_REPORT_FOOTER = 8
Global Const PE_SECT_GROUP_HEADER = 3
Global Const PE_SECT_GROUP_FOOTER = 5
Global Const PE_SECT_DETAIL = 4

'The old section constants with comment showing them in terms of the new:
'(Note that PE_GRANDTOTALSECTION and PE_SUMMARYSECTION both map
' to PE_SECT_REPORT_FOOTER.)

Global Const PE_HEADERSECTION = 2000  'PE_SECTION_CODE (PE_SECT_PAGE_HEADER,   0, 0)
Global Const PE_FOOTERSECTION = 7000  'PE_SECTION_CODE (PE_SECT_PAGE_FOOTER,   0, 0)
Global Const PE_TITLESECTION = 1000   'PE_SECTION_CODE (PE_SECT_REPORT_HEADER, 0, 0)
Global Const PE_SUMMARYSECTION = 8000 'PE_SECTION_CODE (PE_SECT_REPORT_FOOTER, 0, 0)
Global Const PE_GROUPHEADER = 3000    'PE_SECTION_CODE (PE_SECT_GROUP_HEADER,  0, 0)
Global Const PE_GROUPFOOTER = 5000    'PE_SECTION_CODE (PE_SECT_GROUP_FOOTER,  0, 0)
Global Const PE_DETAILSECTION = 4000  'PE_SECTION_CODE (PE_SECT_DETAIL,        0, 0)
Global Const PE_GRANDTOTALSECTION = PE_SUMMARYSECTION


' Controlling group conditions (i.e. group breaks)
' ------------------------------------------------
Global Const PE_SF_MAX_NAME_LENGTH = 50

Global Const PE_SF_DESCENDING = 0
Global Const PE_SF_ASCENDING = 1
Global Const PE_SF_ORIGINAL = 2 'only for group condition
Global Const PE_SF_SPECIFIED = 3 'only for group condition

' use PE_ANYCHANGE for all field types except Date
Global Const PE_GC_ANYCHANGE = 0

' use these constants for Date and DateTime fields
Global Const PE_GC_DAILY = 0
Global Const PE_GC_WEEKLY = 1
Global Const PE_GC_BIWEEKLY = 2
Global Const PE_GC_SEMIMONTHLY = 3
Global Const PE_GC_MONTHLY = 4
Global Const PE_GC_QUARTERLY = 5
Global Const PE_GC_SEMIANNUALLY = 6
Global Const PE_GC_ANNUALLY = 7

' use these constants for Time  and DateTime fields
Global Const PE_GC_BYSECOND = 8
Global Const PE_GC_BYMINUTE = 9
Global Const PE_GC_BYHOUR = 10
Global Const PE_GC_BYAMPM = 11

' use these constants for Boolean fields
Global Const PE_GC_TOYES = 1
Global Const PE_GC_TONO = 2
Global Const PE_GC_EVERYYES = 3
Global Const PE_GC_EVERYNO = 4
Global Const PE_GC_NEXTISYES = 5
Global Const PE_GC_NEXTISNO = 6

Declare Function PESetGroupCondition Lib "crpe32.dll" (ByVal printJob%, ByVal sectionCode%, ByVal ConditionField$, ByVal condition%, ByVal SortDirection%) As Integer

Declare Function PEGetNGroups Lib "crpe32.dll" (ByVal printJob%) As Integer

' for PEGetGroupCondition, Condition% encodes both
' the condition and the type of the condition field
Global Const PE_GC_CONDITIONMASK = &HFF
Global Const PE_GC_TYPEMASK = &HF00

Global Const PE_GC_TYPEOTHER = &H0
Global Const PE_GC_TYPEDATE = &H200
Global Const PE_GC_TYPEBOOLEAN = &H400
Global Const PE_GC_TYPETIME = &H800

Declare Function PEGetGroupCondition Lib "crpe32.dll" (ByVal printJob%, ByVal sectionCode%, ConditionFieldHandle As Long, ConditionFieldLength%, condition%, SortDirection%) As Integer

Global Const PE_FIELD_NAME_LEN = 512

Global Const PE_GO_TBN_ALL_GROUPS_UNSORTED = 0
Global Const PE_GO_TBN_ALL_GROUPS_SORTED = 1
Global Const PE_GO_TBN_TOP_N_GROUPS = 2
Global Const PE_GO_TBN_BOTTOM_N_GROUPS = 3

Type PEGroupOptions
    StructSize As Integer
    'when setting, pass a PE_GC_ constant, or PE_UNCHANGED for no change.
    'when getting, use PE_GC_TYPEMASK and PE_GC_CONDITIONMASK to decode the condition.
    condition As Integer
    fieldName As String * PE_FIELD_NAME_LEN ' formula form, or empty for no change.
    SortDirection As Integer                ' a PE_SF_ const, or PE_UNCHANGED for no change.
    repeatGroupHeader As Integer            ' BOOL value, or PE_UNCHANGED for no change.
    keepGroupTogether As Integer            ' BOOL value, or PE_UNCHANGED for no change.
    topOrBottomNGroups As Integer           ' a PE_GO_TBN_ constant, or PE_UNCHANGED for no change.
    topOrBottomNSortFieldName As String * PE_FIELD_NAME_LEN ' formula form, or empty for no change.
    ntoporbottomgroups As Integer           ' the number of groups to keep, 0 for all, or PE_UNCHANGED for no change.
    discardOtherGroups As Integer           ' BOOL value, or PE_UNCHANGED for no change.
    ignored As Integer                     ' for 4 byte alignment ignored.
    hierarchicalSorting As Integer              ' Boolean or PE_UNCHANGED
    instanceIDField As String * PE_FIELD_NAME_LEN       ' for hierarchical grouping
    parentIDField As String * PE_FIELD_NAME_LEN         ' for hierarchical grouping
    groupIndent As Long                         ' twips
End Type

Global Const PE_SIZEOF_GROUP_OPTIONS = 10 * PE_WORD_LEN + _
                                       4 * PE_FIELD_NAME_LEN + _
                                       1 * PE_LONG_LEN

Declare Function PEGetGroupOptions Lib "crpe32.dll" (ByVal printJob%, ByVal groupN%, groupOptions As PEGroupOptions) As Integer
                                
Declare Function PESetGroupOptions Lib "crpe32.dll" (ByVal printJob%, ByVal groupN%, groupOptions As PEGroupOptions) As Integer

' Controlling formulas, selection formulas and group selection formulas
' ---------------------------------------------------------------------

Declare Function PEGetNFormulas Lib "crpe32.dll" (ByVal printJob%) As Integer

Declare Function PEGetNthFormula Lib "crpe32.dll" (ByVal printJob%, ByVal FormulaN%, nameHandle As Long, nameLength%, TextHandle As Long, TextLength%) As Integer

Declare Function PEGetFormula Lib "crpe32.dll" (ByVal printJob%, ByVal formulaName$, TextHandle As Long, TextLength%) As Integer

Declare Function PESetFormula Lib "crpe32.dll" (ByVal printJob%, ByVal formulaName$, ByVal formulaString$) As Integer

Declare Function PECheckFormula Lib "crpe32.dll" (ByVal printJob%, ByVal formulaName$) As Integer

Declare Function PEGetSelectionFormula Lib "crpe32.dll" (ByVal printJob%, TextHandle As Long, TextLength%) As Integer

Declare Function PESetSelectionFormula Lib "crpe32.dll" (ByVal printJob%, ByVal formulaString$) As Integer

Declare Function PECheckSelectionFormula Lib "crpe32.dll" (ByVal printJob%) As Integer

Declare Function PEGetGroupSelectionFormula Lib "crpe32.dll" (ByVal printJob%, TextHandle As Long, TextLength%) As Integer

Declare Function PESetGroupSelectionFormula Lib "crpe32.dll" (ByVal printJob%, ByVal formulaString$) As Integer

Declare Function PECheckGroupSelectionFormula Lib "crpe32.dll" (ByVal printJob%) As Integer


' SQL Expressions
'-----------------

Declare Function PEGetNSQLExpressions Lib "crpe32.dll" (ByVal printJob%) As Integer

Declare Function PEGetNthSQLExpression Lib "crpe32.dll" (ByVal printJob%, ByVal expressionN%, nameHandle&, nameLength%, TextHandle&, TextLength%) As Integer

Declare Function PEGetSQLExpression Lib "crpe32.dll" (ByVal printJob%, ByVal expressionName$, TextHandle&, TextLength%) As Integer

Declare Function PESetSQLExpression Lib "crpe32.dll" (ByVal printJob%, ByVal expressionName$, ByVal expressionString$) As Integer

Declare Function PECheckSQLExpression Lib "crpe32.dll" (ByVal printJob%, ByVal expressionName$) As Integer

'********************************************************************************
' NOTE : Stored Procedures
'
' The previous Stored Procedure API Calls PEGetNParams, PEGetNthParam,
' PEGetNthParamInfo and PESetNthParam have been made obsolete.  Older
' applications that used these API Calls will still work as before, but for new
' development please use the new Parameter API calls below,
'
' The Stored Procedure Parameters have now been unified with the Parameter
' Fields.
'
' The replacements for these calls are as follows :
'      PEGetNParams        = PEGetNParameterFields
'      PEGetNthParam       = PEGetNthParameterField
'      PEGetNthParamInfo   = PEGetParameterValueInfo
'      PESetNthParam       = PESetNthParameterField
'
' NOTE : To tell if a Parameter Field is a Stored Procedure, use the
'        PEGetNthParameterType or PEGetNthParameterField API Calls
'
' If you wish to SET a parameter to NULL then set the CurrentValue to CRWNULL.
' The CRWNULL is of Type String and is independant of the datatype of the
' parameter.
'
'********************************************************************************

' Controlling Parameter Fields
' ----------------------------

Global Const PE_PF_REPORT_NAME_LEN = 128
Global Const PE_PF_NAME_LEN = 256
Global Const PE_PF_PROMPT_LEN = 256
Global Const PE_PF_VALUE_LEN = 256
Global Const PE_PF_EDITMASK_LEN = 256

Global Const PE_PF_NUMBER = 0
Global Const PE_PF_CURRENCY = 1
Global Const PE_PF_BOOLEAN = 2
Global Const PE_PF_DATE = 3
Global Const PE_PF_STRING = 4
Global Const PE_PF_DATETIME = 5
Global Const PE_PF_TIME = 6

Type PEParameterFieldInfo
    'Initialize to PE_SIZEOF_PARAMETER_FIELD_INFO.
    StructSize As Integer

    'PE_PF_ constant
    valueType As Integer

    'Indicate the default value is set in PEParameterFieldInfo.
    DefaultValueSet As Integer

    'Indicate the current value is set in PEParameterFieldInfo.
    CurrentValueSet As Integer

    'All strings are null-terminated.
    Name As String * PE_PF_NAME_LEN
    Prompt As String * PE_PF_PROMPT_LEN
